Add docs and update the image_count
